[gd_scene load_steps=3 format=3 uid="uid://df658kegr3h6p"]

[ext_resource type="Script" path="res://scripts/option_slot.gd" id="1_5l5yq"]
[ext_resource type="Texture2D" uid="uid://c2500isbwrilx" path="res://assets/Card/blueCard.png" id="1_g2b27"]

[node name="option_slot" type="HBoxContainer"]
offset_top = 1.0
offset_right = 586.0
offset_bottom = 236.0
script = ExtResource("1_5l5yq")

[node name="option1" type="TextureButton" parent="."]
custom_minimum_size = Vector2(300, 300)
layout_mode = 2
mouse_filter = 1
texture_normal = ExtResource("1_g2b27")
stretch_mode = 4

[node name="Label" type="Label" parent="option1"]
layout_mode = 0
offset_left = 46.0
offset_top = 34.0
offset_right = 204.0
offset_bottom = 77.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
text = "LVL"

[node name="Description" type="Label" parent="option1"]
texture_filter = 1
layout_mode = 2
offset_left = 33.0
offset_top = 209.0
offset_right = 226.0
offset_bottom = 235.0
theme_override_font_sizes/font_size = 30

[node name="TextureRect" type="TextureRect" parent="option1"]
layout_mode = 0
offset_left = 47.0
offset_top = 61.0
offset_right = 205.0
offset_bottom = 209.0

[node name="ItemDescription" type="Label" parent="option1"]
texture_filter = 1
offset_left = 34.0
offset_top = 251.0
offset_right = 227.0
offset_bottom = 277.0

[node name="option2" type="TextureButton" parent="."]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
mouse_filter = 1
texture_normal = ExtResource("1_g2b27")
stretch_mode = 4

[node name="Label" type="Label" parent="option2"]
layout_mode = 0
offset_left = 46.0
offset_top = 34.0
offset_right = 204.0
offset_bottom = 77.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
text = "LVL"

[node name="Description" type="Label" parent="option2"]
texture_filter = 1
layout_mode = 0
offset_left = 35.0
offset_top = 203.0
offset_right = 224.0
offset_bottom = 245.0
theme_override_font_sizes/font_size = 30

[node name="TextureRect" type="TextureRect" parent="option2"]
layout_mode = 0
offset_left = 47.0
offset_top = 61.0
offset_right = 205.0
offset_bottom = 209.0

[node name="ItemDescription" type="Label" parent="option2"]
texture_filter = 1
offset_left = 35.0
offset_top = 250.0
offset_right = 224.0
offset_bottom = 276.0

[node name="option3" type="TextureButton" parent="."]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
mouse_filter = 1
texture_normal = ExtResource("1_g2b27")
stretch_mode = 4

[node name="Label" type="Label" parent="option3"]
layout_mode = 0
offset_left = 46.0
offset_top = 34.0
offset_right = 204.0
offset_bottom = 77.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
text = "LVL"

[node name="Description" type="Label" parent="option3"]
texture_filter = 1
layout_mode = 0
offset_left = 35.0
offset_top = 209.0
offset_right = 224.0
offset_bottom = 251.0
theme_override_font_sizes/font_size = 30

[node name="TextureRect" type="TextureRect" parent="option3"]
layout_mode = 0
offset_left = 47.0
offset_top = 61.0
offset_right = 205.0
offset_bottom = 209.0

[node name="ItemDescription" type="Label" parent="option3"]
texture_filter = 1
offset_left = 35.0
offset_top = 250.0
offset_right = 224.0
offset_bottom = 276.0

[connection signal="gui_input" from="option1" to="." method="_on_option_1_gui_input"]
[connection signal="gui_input" from="option2" to="." method="_on_option_2_gui_input"]
[connection signal="gui_input" from="option3" to="." method="_on_option_2_gui_input"]
